	* src/Filters/_SidebarFilter.py: added
	* src/Filters/_PersonSidebarFilter.py: added
	* src/DataViews/_PersonView.py: cleaner interface to filters
	* src/plugins/RelCalc.py: cleaner interface to filters
	* src/PeopleModel.py: cleaner interface to filters
	* src/Selectors/_SelectPerson.py: cleaner interface to filters

2006-05-15  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_SourceView.py (edit,on_double_click): Catch exception.
	* configure.in: Generate new Makefile.
	* src/Makefile.am: adapt to new module.
	* src/Selectors: separate selectors in their own module.
	* src/Select*.py: move to Selectors.
	* src/DataViews/_FamilyView.py: Use new module.
	* src/Editors/_EditLdsOrd.py: Use new module.
	* src/Editors/_EditPersonRef.py: Use new module.
	* src/Editors/_EditFamily.py: Use new module.
	* src/DisplayTabs/_SourceEmbedList.py: Use new module.
	* src/DisplayTabs/_RepoEmbedList.py: Use new module.
	* src/DisplayTabs/_EventEmbedList.py: Use new module.
	* src/DisplayTabs/_GalleryTab.py: Use new module.
	* src/plugins/FilterEditor.py: Use new module.
	* src/plugins/SimpleBookTitle.py: Use new module.
	* src/PluginUtils/_Report.py: Use new module.

2006-05-14  Alex Roitman  <shura@gramps-project.org>
	* src/Makefile.am (gdir_PYTHON): Add new file.
	* src/SelectRepository.py: Add new file.
	* src/DisplayTabs/_RepoEmbedList.py: Add share button.

	* configure.in: Set up for 2.1.3.
	* src/GrampsDb/_ReadXML.py (start_url): Parse URL type.
	* example/gramps/exapmle.gramps: Add repositories, use new XML.
	* example/gramps/data.gramps: Add repositories, use new XML.
	* src/DateHandler/__init__.py: Remove unneeded imports.
	* src/plugins/Calendar.py (print_page): Use GrampsLocale._months.

2006-05-14  Brian Matherly  <brian@gramps-project.org>
	* src/PluginUtils/_ReportUtils.py: Change strings to include 
	gender instead of "child of"
	* src/plugins/FamilyGroup.py: Fix for Event and EventType changes.

2006-05-14  Don Allingham  <don@gramps-project.org>