@@ -34,97 +34,36 @@ from gettext import gettext as _
 
 #-------------------------------------------------------------------------
 #
-# GTK/Gnome modules
-#
-#-------------------------------------------------------------------------
-
-import gtk
-import gtk.glade
-
-#-------------------------------------------------------------------------
-#
 # gramps modules
 #
 #-------------------------------------------------------------------------
-import const
-import ListModel
 import DateHandler
-import ManagedWindow
+from RelLib import Event
+from _BaseSelector import BaseSelector
 
 #-------------------------------------------------------------------------
 #
 # SelectEvent
 #
 #-------------------------------------------------------------------------
-class SelectEvent(ManagedWindow.ManagedWindow):
-    """
-    Selects an event from the list of available events
-    """
+class SelectEvent(BaseSelector):
 
-    def __init__(self, dbstate, uistate, track, title):
-        """
-        Create an Event Selector, allowing the user to select on of the
-        events in the event list.
-        """
+    def get_column_titles(self):
+        return [(_('Description'), 4, 250), (_('ID'), 1, 75),
+                (_('Type'), 2, 75), (_('Date'), 3, 150) ]
 
-        self.title = title
-        ManagedWindow.ManagedWindow.__init__(self, uistate, track, self)
-
-        self.db = dbstate.db
-        self.glade = gtk.glade.XML(const.gladeFile, "select_person", "gramps")
-        window = self.glade.get_widget('select_person')
-        title_label = self.glade.get_widget('title')
-        self.elist =  self.glade.get_widget('plist')
-
-        self.set_window(window, title_label, self.title)
-
-        titles = [(_('Description'), 4, 250), (_('ID'), 1, 75),
-                  (_('Type'), 2, 75), (_('Date'), 3, 150), ('', 4, 0) ] 
-        self.ncols = len(titles)      
-
-        self.model = ListModel.ListModel(self.elist, titles)
-
-        self.redraw()
-        self.show()
-
-    def build_menu_names(self,obj):
-        return (self.title, None)
-
-    def redraw(self):
-        """
-        Redraws the event list
-        """
+    def get_from_handle_func(self):
+        return self.db.get_event_from_handle
         
-        self.model.clear()
-        self.model.new_model()
+    def get_cursor_func(self):
+        return self.db.get_event_cursor
 
-        for handle in self.db.get_event_handles():
-            event = self.db.get_event_from_handle(handle)
-            desc = event.get_description()
-            name = str(event.get_type())
-            the_id = event.get_gramps_id()
-            date = DateHandler.get_date(event)
-            self.model.add([desc, the_id, name, date], handle)
+    def get_class_func(self):
+        return Event
 
-        self.model.connect_model()
-
-    def run(self):
-        """
-        Runs te dialog, returning None if the event was not selected,
-        or the event that was selected.
-        """
-        val = self.window.run()
-
-        if val == gtk.RESPONSE_OK:
-            store, node = self.model.get_selected()
-            if node:
-                data = self.model.get_data(node, range(self.ncols))
-                handle = data[4]
-                return_value = self.db.get_event_from_handle(handle)
-            else:
-                return_value = None
-            self.close()
-	    return return_value
-        else:
-            self.close()
-            return None
+    def get_model_row_data(self,obj):
+        desc = obj.get_description()
+        the_id = obj.get_gramps_id()
+        name = str(obj.get_type())
+        date = DateHandler.get_date(obj)
+        return [desc, the_id, name, date]
